Cleanup example, fix weird lighting